prevent overflow of keys

--- a/src/components/Omnisearch/Omnisearch.module.scss
+++ b/src/components/Omnisearch/Omnisearch.module.scss
@@ -35,6 +35,10 @@
     }
   }
   & > .keyDropdown {
+    max-height: $size-64;
+    overflow-y: auto;
+    overflow-x: hidden;
+
     position: absolute;
     z-index: $layer-2;
 
